# openmeals

./: .dockerignore  .env.example  .env.test  .gitignore  .releaserc.json  .woodpecker.yml  CLAUDE.md  Dockerfile  Dockerfile.db  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: release.yml
.woodpecker/: ci.yml  lint.yml  publish.yml  release.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  api-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  service.yaml  worker-deployment.yaml
lambda/: Dockerfile  process_image.py  requirements.txt
migrations/: env.py  helpers.py
migrations/versions/: 15a262805bb1_add_image_key_to_ingestibles.py  295990d065d8_add_vectors.py  467b6206bb7d_add_meal_fks.py  a5334e55f04f_add_name_to_users.py  acc01156a51a_create_tables.py  c170093a26a3_bootstrap_citus.py  d4e5f6a7b8c9_add_locale_and_translations.py
scripts/: create_local_token.py  download_model.py  git-release.sh  localstack_init.sh
src/core/: __init__.py  celery.py  config.py  database.py  fastapi.py  lifespan.py  mixins.py  schemes.py  telemetry.py
src/libs/: app.py  datetime.py  db.py  exceptions.py  ingestible.py  locale.py  models.py  pagination.py  s3.py  schemes.py  translations.py  types.py
src/libs/auth/: __init__.py  local.py  providers.py  tokens.py
src/libs/embeddings/: __init__.py  base.py  config.py  factory.py  mock.py  openai.py  sentence_transformer.py  triton.py
src/modules/auth/: handlers.py  models.py  schemes.py
src/modules/drinks/: dependencies.py  handlers.py  models.py  schemes.py  tasks.py
src/modules/foods/: dependencies.py  handlers.py  models.py  schemes.py  tasks.py
src/modules/meals/: dependencies.py  handlers.py  schemes.py
src/modules/meals/models/: __init__.py  meal.py  meal_drink.py  meal_food.py
src/modules/summaries/: dependencies.py  handlers.py  schemes.py
src/modules/summaries/models/: __init__.py  meal_summary.py  periodic_summary.py
src/modules/users/: dependencies.py  handlers.py  schemes.py
src/modules/users/models/: __init__.py  user.py  user_profile.py
src/services/: image.py  ingestible.py  locale.py  ratelimit.py  tasks.py
src/utils/: fastapi.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_drinks.py  test_foods.py  test_meals.py  test_visibility.py
tests/unit/: conftest.py  test_drinks.py  test_foods.py  test_meals.py  test_summaries.py  test_users.py
